# academic-performance-predictor

./: .gitignore  Dockerfile  README.md  compose.debug.yaml  compose.yaml  main.py  pyproject.toml  run.sh
.github/workflows/: main.yml
data/: scaler.pkl
data/notebookData/: final_features_selection_data.csv
models/: best_model.pkl
notebooks/: a_EDA.ipynb  b_cleaning.ipynb  c_feature_engineering.ipynb  d_features_selection.ipynb  e_model_training.ipynb
src/pipeline/: ETLFeaturePipeline.py
src/step/: a_ingest.py  b_cleaning.py  c_feature_engineering.py  d_features_selection.py  e_model_training.py  f_predict.py
src/web/: api.py
src/web/static/: style.css
src/web/templates/: index.html
