[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-performance-predictor"
version = "0.1.0"
description = "A machine learning pipeline for analyzing student habits and predicting academic outcomes."
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name="Sheikh Rasel Ahmed", email="sheikhraselahmed19@gmail.com" },
]

# This tells setuptools to look at [tool.setuptools.dynamic] later
dynamic = ["dependencies"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/Rasel1435/academic-performance-predictor"
"Bug Tracker" = "https://github.com/Rasel1435/academic-performance-predictor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}